--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -43,7 +43,7 @@
         </p>
 
         <form class="try" method="post" action="indieauth/auth">
-            https://<input required type="text" name="me" placeholder="example.org">
+            <span class="label">https://</span><input required type="text" name="me" placeholder="example.org">
             <input type="hidden" name="redirect_to" value="/success">
             <input type="submit" value="Sign In">
         </form>
