--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,28 +1,31 @@
 body {
-    font-family: sans-serif;
     text-align: justify;
-    line-height: 1.4;
 }
 
 div#container {
     max-width: 600px;
     margin: 0 auto;
+    line-height: 1.4;
 }
 
 h1 {
     border-bottom: 1px solid #000;
-    padding-bottom: 10px;
+}
+
+code, pre {
+    font-family: monospace;
+    font-size: 120%;
 }
 
 code { 
-    background: hsl(220, 80%, 90%); 
-    font-size: 120%;
+    background-color: #d1def9;
 }
 
 pre {
+    background-color: #f9e5d1;
     white-space: pre-wrap;
-    background: hsl(30,80%,90%);
-    font-size: 120%;
+    border: 1px solid #e9d5c1;
+    padding: 0.5em;
 }
 
 span.sup {
@@ -39,15 +42,8 @@ div.footnotes {
 
 form {
     text-align: center;
+    padding: 1em;
     margin: 1em auto;
-}
-
-button {
-    margin: 1em;
-}
-
-button.approve {
-    color: green;
 }
 
 a.header {
@@ -61,7 +57,8 @@ a {
 }
 
 p.info {
-    background-color: #006633;
+    background-color: #063;
+    border: 1px solid #052;
     color: #fff;
     padding: 1em;
 }
@@ -72,6 +69,7 @@ p.info a {
 
 p.warn {
     background-color: #fc0;
+    border: 1px solid #eb0;
     color: #000;
     padding: 1em;
 }
@@ -80,9 +78,27 @@ p.warn a {
     color: #000;
 }
 
-form.try {
-    background-color: #eee;
-    padding: 1em;
+span.label {
+    padding: 0.5em 0.25em;
+    border: 1px solid #d5d5d5;
+    border-right: 0;
+    background-color: #e5e5e5;
+}
+
+input[type=text] {
+    padding: 0.5em;
+    border: 1px solid #d5d5d5;
+}
+
+label.remember {
+    margin-right: 2em;
+}
+
+input[type=submit] {
+    padding: 0.5em;
+    border: 1px solid #052;
+    color: #fff; 
+    background: #063;
 }
 
 table.askConfirmation {
