fix typo in confirmation dialog

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -8,7 +8,7 @@
         <a class="header" href="welcome"><h1>IndieCert</h1></a>
 
         <p>
-            A website is wants to verify your identity!
+            A website wants to verify your identity!
         </p>
 
         <table class="askConfirmation">
