--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -5,7 +5,7 @@
 <body>
     <div id="container">
 
-        <a class="header" href="welcome"><h1>IndieCert</h1></a>
+        <a class="header" href="."><h1>IndieCert</h1></a>
 
         <p>
             A website wants to verify your identity!
