--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -4,7 +4,7 @@
 {% include 'head.html' %}
 <body>
     <div id="container">
-        <a class="header" href="welcome"><h1>IndieCert</h1></a>
+        <a class="header" href="."><h1>IndieCert</h1></a>
         <p>
             Here you can generate a new client certificate to be able to use IndieCert.
         </p>
