--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -4,7 +4,7 @@
 {% include 'head.html' %}
 <body>
     <div id="container">
-        <a class="header" href="welcome"><h1>IndieCert</h1></a>
+        <a class="header" href="."><h1>IndieCert</h1></a>
 
         <h2>Frequently Asked Questions</h2>
 
