--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -4,7 +4,7 @@
 {% include 'head.html' %}
 <body>
     <div id="container">
-        <a class="header" href="welcome"><h1>IndieCert</h1></a>
+        <a class="header" href="."><h1>IndieCert</h1></a>
         <p class="warn">
             You reached this page because you do not yet have a client certificate
             installed in your browser/operating system or declined to authenticate with it
