--- a/views/footer.html
+++ b/views/footer.html
@@ -2,8 +2,7 @@
     <span class="pull-left">IndieCert</span>
     <span class="pull-right">
         {% if me is defined and me %}
-            {{ me|e }} | <a href="indieauth/logout">Logout</a> |
+            {{ me|e }} | <a href="account">My Account</a> | <a href="indieauth/logout">Logout</a>
         {% endif %}
-        <a href="faq">FAQ</a>
     </span>
 </div>
