--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -42,15 +42,11 @@
             over HTTPS!
         </p>
 
-        {% if me is defined and me %}
-            <p class="info">Already authenticated as <code><strong>{{ me|e }}</strong></code> (-:</p>
-        {% else %}
-            <form class="try" method="post" action="indieauth/auth">
-                <span class="label">https://</span><input required type="text" name="me" placeholder="example.org">
-                <input type="hidden" name="redirect_to" value="/success">
-                <input type="submit" value="Sign In">
-            </form>
-        {% endif %}
+        <form class="try" method="post" action="indieauth/auth">
+            <span class="label">https://</span><input required type="text" name="me" placeholder="example.org">
+            <input type="hidden" name="redirect_to" value="/account">
+            <input type="submit" value="Sign In">
+        </form>
 
         <h2>Relying Party?</h2>
         <p>
