remove all the footer fiddle stuff

--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -10,6 +10,10 @@
             Welcome <code>{{ me|e }}</code> to your account page.
         </p>
 
+        <form method="get" action="indieauth/logout">
+            <input type="submit" value="Logout">
+        </form>
+
         <h2>Approvals</h2>
         <p>
             This table shows a list of clients for which you remembered the
