--- a/views/footer.html
+++ b/views/footer.html
@@ -1,8 +1,5 @@
 <div class="footer">
-    <span class="pull-left">IndieCert</span>
-    <span class="pull-right">
-        {% if me is defined and me %}
-            {{ me|e }} | <a href="account">My Account</a> | <a href="indieauth/logout">Logout</a>
-        {% endif %}
-    </span>
+    IndieCert |
+    <a href="faq">FAQ</a> |
+    <a href="https://github.com/fkooman/indiecert/">Code</a>
 </div>
