--- a/views/indexPage.twig
+++ b/views/indexPage.twig
@@ -42,10 +42,10 @@
             over HTTPS!
         </p>
 
-        <form class="try" method="post" action="indieauth/auth">
-            <span class="label">https://</span><input required type="text" name="me" placeholder="example.org">
+        <form class="authenticate" method="post" action="indieauth/auth">
+            <label for="me">https://</label><input id="me" required type="text" name="me" placeholder="example.org">
             <input type="hidden" name="redirect_to" value="/account">
-            <input type="submit" value="Sign In">
+            <input class="info" type="submit" value="Sign In">
         </form>
 
         <h2>Relying Party?</h2>
