--- a/web/css/style.css
+++ b/web/css/style.css
@@ -15,12 +15,13 @@ h1 {
 code, pre {
     font-family: monospace;
     font-size: 120%;
-    background-color: #f9e5d1;
+    background-color: #eee;
+    padding: 0.2em;
 }
 
 pre {
     white-space: pre-wrap;
-    border: 1px solid #e8d4c0;
+    border: 1px solid #ccc;
     padding: 0.4em;
 }
 
@@ -44,6 +45,21 @@ a.header {
 a {
     text-decoration: underline;
     color: #000;
+}
+
+p.block {
+    background-color: #eee; 
+    border: 1px solid #ccc;
+    color: #000;
+    padding: 1em;
+}
+
+p.block a {
+    color: #000;
+}
+
+p.block code {
+    background-color: #aaa;
 }
 
 p.info {
@@ -113,13 +129,17 @@ input[type=submit].info {
 input[type=submit].warn {
     background-color: #fc0;
     border: 1px solid #da0;
-    color: #fff; 
+    color: #000; 
 }
 
 input[type=submit].err {
     background-color: #c00;
     border: 1px solid #a00;
     color: #fff; 
+}
+
+form.credential {
+    display: inline;
 }
 
 form.authenticate, form.askConfirmation {
@@ -133,7 +153,6 @@ form.authenticate label {
     background-color: #ddd;
     border: 1px solid #bbb;
     border-right: 0;
-
 }
 
 table.askConfirmation {
