--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -164,6 +164,39 @@
             ideal for testing while developing your relying party!
         </p>
 
+        <h3 id="micropub">Micropub</h3>
+        <p>
+            If you have your own domain and run a
+            <a href="https://indiewebcamp.com/micropub">micropub</a> service,
+            you need to use a credential generated on your
+            <a href="account#micropub">account</a> page. The token is used to
+            authenticate to the <a href="https://tools.ietf.org/html/draft-ietf-oauth-introspection-08">introspection</a> endpoint available
+            at <code>{{ token_endpoint|e }}</code>. For example:
+        </p>
+<pre>
+$ curl \
+    -H "Authorization: Bearer 5f361f597d465578c245e816778fa059" \
+    -d "token=37ab6853eaf6116e9216b31e40dbd3b6" \
+    {{ token_endpoint|e }}
+</pre>
+
+        <p>
+            This will give you the response you can use to determine who
+            authorized the token and accept or deny requests to the micropub
+            endpoint, for example:
+        </p>
+
+<pre>
+{
+    "active": true,
+    "client_id": "https://app.example/",
+    "iat": 1430394445,
+    "me": "https://user.example/",
+    "scope": "post",
+    "sub": "https://user.example/"
+}
+</pre>
+
         <h3>Where can I get more information?</h3>
         <p>
             You can read this <a href="https://www.tuxed.net/fkooman/blog/indiecert.html">blog</a> entry.
