- update `fkooman/rest-plugin-indieauth` to support redirecting in case   of unauthenticated requests to protected endpoints

--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -16,7 +16,7 @@
 
         {% if approvals %}
 
-        <h2>Approvals</h2>
+        <h2 id="approvals">Approvals</h2>
         <p>
             This table shows a list of clients for which you decided to remember the
             approval. Approvals expire automatically after 7 days.
@@ -46,7 +46,7 @@
         {% endif %}
 
         {% if tokens %}
-        <h2>Access Tokens</h2>
+        <h2 id="access_tokens">Access Tokens</h2>
         <p>
             This table shows a list of clients and the access tokens granted to
             them.
