- update `fkooman/rest-plugin-indieauth` - use POST for logout now instead of GET to accomodate updated   `fkooman/rest-plugin-indieauth`

--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -10,7 +10,7 @@
             Welcome to your account page! Your identity is <code>{{ me|e }}</code>.
         </p>
 
-        <form method="get" action="indieauth/logout">
+        <form method="post" action="indieauth/logout">
             <input type="submit" value="Logout">
         </form>
 
