--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -18,8 +18,8 @@
 
         <h2 id="approvals">Approvals</h2>
         <p>
-            This table shows a list of clients for which you decided to remember the
-            approval. Approvals expire automatically after 7 days.
+            This table shows a list of websites for which you decided to remember
+            the approval. Approvals expire automatically after 7 days.
         </p>
 
         <table class="account">
@@ -31,7 +31,7 @@
 
             {% for approval in approvals %}
                 <tr>
-                    <td><code>{{ approval.client_id|e }}</code></td>
+                    <td><a href="{{ approval.client_id|e }}">{{ approval.client_id|e }}</a></td>
                     <td>
                         {% if approval.scope %}
                             <code>{{ approval.scope|e }}</code>
@@ -48,8 +48,8 @@
         {% if tokens %}
         <h2 id="access_tokens">Access Tokens</h2>
         <p>
-            This table shows a list of clients and the access tokens granted to
-            them.
+            This table shows a list of websites that have access tokens granted
+            to them.
         </p>
 
         <table class="account">
@@ -62,7 +62,7 @@
 
             {% for token in tokens %}
                 <tr>
-                    <td><code>{{ token.client_id|e }}</code></td>
+                    <td><a href="{{ token.client_id|e }}">{{ token.client_id|e }}</a></td>
                     <td><code>{{ token.scope|e }}</code></td>
                     <td>{{ token.issue_time|e|date("Y-m-d H:i:s") }}</td>
                     <td>
