--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -169,7 +169,7 @@
             If you have your own domain and run a
             <a href="https://indiewebcamp.com/micropub">micropub</a> service,
             you need to use a credential generated on your
-            <a href="account#micropub">account</a> page. The token is used to
+            <a href="account#credentials">account</a> page. The token is used to
             authenticate to the <a href="https://tools.ietf.org/html/draft-ietf-oauth-introspection">introspection</a> endpoint available
             at <code>{{ token_endpoint|e }}</code>. For example:
         </p>
