remove purpose input field for now

--- a/views/accountPage.twig
+++ b/views/accountPage.twig
@@ -109,7 +109,7 @@
 
         {% if not credential %}
             <form class="credentials" method="post" action="credential">
-                <input type="text" name="type" placeholder="Purpose..." required="required">
+                <!-- <input type="text" name="type" placeholder="Purpose..." required="required"> -->
                 <input class="info" type="submit" value="Generate">
             </form>
         {% endif %}
