- use `rel="publickey"` now instead of `rel="me"` for fingerprint, `rel="me"`   is still supported for now, but `faq` and `missingFingerprint` templates   updated to say `rel="publickey"` (issue #17)

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -116,7 +116,7 @@
         </p>
 
 <pre>
-&lt;link rel="me" href="ni:///sha-256;ThIaJ7TJQ1oAIKCGKe0BdBO3Bh8NzxZeyAa-WCTuzpU?ct=application/x-x509-user-cert"&gt;
+&lt;link rel="publickey" href="ni:///sha-256;ThIaJ7TJQ1oAIKCGKe0BdBO3Bh8NzxZeyAa-WCTuzpU?ct=application/x-x509-user-cert"&gt;
 </pre>
         <p>
             If you want to generate your own fingerprint, you can use OpenSSL
