--- a/views/missingFingerprint.twig
+++ b/views/missingFingerprint.twig
@@ -25,7 +25,7 @@
 &lt;html&gt;
   &lt;head&gt;
     ...
-    <strong>&lt;link rel="me" href="{{ certFingerprint|e }}"&gt;</strong>
+    <strong>&lt;link rel="publickey" href="{{ certFingerprint|e }}"&gt;</strong>
     ...
   &lt;/head&gt;
   &lt;body&gt;
